[project]
name = "comfy-mcp-server"
version = "1.0.0"
description = "MCP Server for ComfyUI text to image Workflow"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.19",
    "langchain-ollama>=0.2.3",
    "mcp[cli]>=1.2.1",
]
authors = [
    {name = "Karim Lalani", email = "jimmy00784@gmail.com"},
]
maintainers = [
    {name = "Karim Lalani", email = "jimmy00784@gmail.com"},
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/lalanikarim/comfy-mcp-server/"
Repository = "https://github.com/lalanikarim/comfy-mcp-server/"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
comfy-mcp-server = "comfy_mcp_server:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/comfy_mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
